# the-system

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
database/: schema.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Dashboard/: Dashboard.tsx  HealthBar.tsx  PlayerStats.tsx  StreakDisplay.tsx  index.ts
src/components/Journal/: JournalView.tsx  index.ts
src/components/Navigation/: Navigation.tsx
src/components/Quests/: CompletedQuestItem.tsx  QuestCard.tsx  QuestItem.tsx  QuestList.tsx  QuestModal.tsx  XPIndicator.tsx  index.ts
src/components/Skills/: SkillCard.tsx  SkillModal.tsx  index.ts
src/components/Timer/: ActiveTimerIndicator.tsx  CancelConfirmDialog.tsx  ManualTimeEntry.tsx  RecoveryQuestBanner.tsx  SkillSelector.tsx  TimerControls.tsx  TimerDisplay.tsx  TimerManager.tsx  TimerView.tsx  index.ts
src/components/common/: AnimatedNumber.tsx  (+7 more)
src/hooks/: usePlayer.ts  useQuests.ts  useSkills.ts  useTimer.ts
src/lib/: dailyResolution.ts  dateUtils.test.ts  dateUtils.ts  db.ts  initDatabase.ts  initialData.ts  journalService.ts  recoveryService.ts  recoveryStorage.ts  snapshotService.ts  timeLogService.test.ts  timeLogService.ts  xpCalculator.ts
src/stores/: journalStore.ts  navigationStore.ts  playerStore.ts  questsStore.ts  skillsStore.ts  timerStore.ts  toastStore.ts
src/styles/: globals.css
src/types/: index.ts
